# discord-bot-google-calendar

./: .env.template  .gitignore  .gitmodules  app.py  butler_state.json  create_event.py  langgraph.json  litellm-openai-test.py  litellm-test.py  post_schedule.py  pyproject.toml  pytest.ini  swarm-test.py  swarm_calendar_test.py  test_agent_cli.py  test_event_search_debug.py  test_morning.py  test_weekly_event_dry_run.py  test_weekly_event_send.py  weather.py
.github/workflows/: black.yml  ci,yml  ci.yml  create_event.yml  e2e-tests.yml  month.yml  pylint.yml  pytest.yml  today.yml  week.yml
agents/: __init__.py  base_agent.py  calendar_agent.py  google_calendar.py  google_places.py  government_agent.py  kusaka_agent.py  news_agent.py  openmeteo_client.py  search_agent.py  types.py  weather_agent.py  wikipedia_agent.py
config/: anniversaries.yml  event_sources.yml  ignore_rules.yml  notify_rules.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISCORD_BOT_SETUP.md  PROJECT.md  REQUIREMENTS.md  TECH_RESEARCH.md
docs/architecture/: agent_design.md
scripts/: deploy.bat  deploy.sh  generate_anniversaries.py  test_notification.py
src/: __init__.py  butler.py  main.py
src/agents/: __init__.py  graph.py  tools.py
src/clients/: __init__.py  calendar.py  claude.py  discord.py  event_search.py  expense.py  health.py  home_assistant.py  housework.py  life_info.py  maps.py  reminder.py  school.py  shopping_list.py  today_info.py  weather.py  web_search.py
src/config/: __init__.py  settings.py
src/scheduler/: __init__.py  jobs.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_app.py  test_butler.py  test_calendar_agent.py  test_create_event.py  test_kusaka_agent.py  test_post_schedule.py  test_search_agent.py
tests/_legacy/: test_calendar_agent.py  test_create_event.py  test_government_agent.py  test_kusaka_agent.py  test_multimodal_calendar.py  test_news_agent.py  test_post_schedule.py  test_search_agent.py  test_weather_agent.py  test_wikipedia_agent.py
tests/e2e/: __init__.py  test_api_integration.py
tests/integration/: test_notification_flow.py
tests/unit/: __init__.py  test_butler_extended.py  test_image_processing.py
tests/unit/agents/: __init__.py  test_graph.py  test_tools.py
tests/unit/clients/: __init__.py  test_calendar.py  test_claude.py  test_discord.py  test_event_search.py  test_life_info.py  test_weather.py
